Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4194

Missing comma breaks mysys error messages

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.1, 5.5.29, 5.1.67, 5.2.14, 5.3.12
    • 10.0.2, 5.5.30, 5.1.73, 5.2.15, 5.3.13
    • None
    • None

    Description

      mysys/errors.c in 10.0.1 tarball doesn't have comma on line 57 which makes error messages on this and subsequent lines incorrect.

      Apparently these error messages are not met anywhere in tests which probably should be fixed too.

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            pivanof Pavel Ivanov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 5m
                5m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.